<resources>
    <string name="app_name">Student Database</string>
    <string name="add_data">Add Data</string>
    <string name="view_all">View All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="marks">Marks</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No</string>
    <string name="student_details">Student Details</string>
    <string name="view_details">View Details</string>
    <string name="insert">Insert</string>
    <string name="roll_number_cannot_be_empty">Roll Number cannot be empty</string>
    <string name="s_no">S No</string>
    <string name="get_details">Get Details</string>
    <string name="view_student_list">View Student List</string>
    <string name="cgpa">CGPA</string>
    <string name="admission_quota">Admission Quota</string>
    <string name="guardian_occupation">Guardian Occupation</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No</string>
    <string name="age">Age</string>
</resources>